--- a/index.html
+++ b/index.html
@@ -11,38 +11,81 @@
 <!-- ######################## Ignore Above This Line ############################## -->
 
   <!-- Header Section -->
-  <header>
-<h1> Shwe Yee Yoon Thient </h1>
-<h2> I like to eat food </h2>
-<p> It is good for me </p>
-<h3> the food that I like </h3>
-<ul>
-<li> Apple </li>
-<li> Orange </li>
-  </ul>
-  <a href="ShweYee.pdf" class="btn">Botton</a>
-  <img src="profile.jpg"
+
+<header class="header">
+
+<div class="container">
+
+<div class="intro">
+
+  <h1> Hi, My name is Shwe Yee Yoon Theint </h1>
+  
+  <p class="subheading"> I aspire to leverage on data analytics skills to drive insight for solving societal problems. </p>
+
+  <a herf="ShweYee.pdf" class="btn" download="Resume"> Resume </a>
+</div>
+
+<img src="profile.jpg" class="profile-pic">
+
+</div>
   </header>
 
 
   <!-- About Section -->
-  <section>
-
+  <section class="section about">
+    <div class="container">
+      <h2>About</h2>
+      <p>I’m a student at Minmahaw School (โรงเรียนมินมะฮอ). An enthusiastic and adaptable individual with a passion for economics and a strong interest in contributing to the sustainable development of the local economy.</p>
+      <ul class="info-list">
+        <li><strong>Name:</strong> Shwe Yee Yoon Thient</li>
+        <li><strong>Age:</strong> 21</li>
+        <li><strong>School:</strong> Minmahaw School - โรงเรียนมินมะฮอ</li>
+        <li><strong>Interests:</strong> Econmics</li>
+        <li><strong>Hobbies:</strong> Movies</li>
+      </ul>
+    </div>
   </section>
-
 
   <!-- Skills Section -->
-  <section>
-
+  <section class="section skills">
+    <div class="container">
+      <h2>Skills</h2>
+      <div class="skill-category">
+        <h3>Data analysis</h3>
+        <p> Kobo Tool Box, Survey, Data manuplication</p>
+      </div>
+      <div class="skill-category">
+        <h3>Technical Proficiency</h3>
+        <p>Canva, Excel, Data Visualization</p>
+      </div>
+      <div class="skill-category">
+        <h3>People Skills</h3>
+        <p>Communication, Leadership, Social Work</p>
+      </div>
+    </div>
   </section>
-
 
   <!-- Experience Section -->
-  <section>
-
+  <section class="section experience">
+    <div class="container">
+      <h2>Experience</h2>
+      <div class="card">
+        <h3> English Teacher </h3>
+        <p><strong>Myanmar, Mar 2024 – May 2024</strong></p>
+        <ul>
+          <li>Facilitated the teaching of the curriculum to 2 classes of students and prepared detailed lesson plans to develop their reading, writing and oratorical skills, resulting an improvement of grades. </li>
+          <li>Focused on the students welfare via fun activities, scholarship and academic journey sharing sessions outside of the class </li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3> Junir Data Analyst  </h3>
+        <p><strong> Myanmar, Sep 2023 – Nov 2024</strong></p>
+        <ul>
+          <li> Developed and implemented a standardized factsheet via manipulating the supply chain and logistics data set of cottage and agricultural industries   </li>
+          <li> Generated a final report utilizing the above data set to create data insights and recommended solutions, which was sent to the Ministry of Commerce and survey respondents in order to solve their existing gaps and needs.</li>
+        </ul>
+      </div>
+    </div>
   </section>
-
-
-<!-- ######################## Ignore Below This Line ############################## -->
 </body>
 </html>
